--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1170,9 +1170,9 @@ footer {
                         <span>Gandhinagar</span>
                     </div>
                     <i class="fa-solid fa-bell" id="notification" title="No Notifications"></i>
-                    <a href="#" id="offer-btn">Offers</a>
-                    <a href="#">Gift Cards</a>
-                    <a href="#">About Us</a>
+                    <a href="offers.html" id="offer-btn">Offers</a>
+                    <a href="giftcards.html">Gift Cards</a>
+                    <a href="about.html">About Us</a>
                 </div>
             </div>
         </nav>
