--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1159,7 +1159,7 @@ footer {
         <nav>
             <div class="nav-links">
                 <div class="main-links">
-                    <a href="try.html">Home</a>
+                    <a href="#">Home</a>
                     <a href="#">Movies</a>
                     <a href="#">Events</a>
                 </div>
